--- a/jupyter_cadquery/viewer/viewer.ipynb
+++ b/jupyter_cadquery/viewer/viewer.ipynb
@@ -3,6 +3,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "72045750-c6b2-4f9a-aaf0-be24bc599b4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<style>\n",
+    "body {\n",
+    "  margin: 0px !important;\n",
+    "  padding: 0px !important;\n",
+    "}\n",
+    ".jp-Cell {\n",
+    "    padding: 0px\n",
+    "}\n",
+    ".jp-Cell-outputWrapper {\n",
+    "    margin-top: 0px !important;\n",
+    "}\n",
+    ".tcv_cad_viewer {\n",
+    "    margin: 0px\n",
+    "}\n",
+    "</style>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9e3173e3-0ad5-4da8-b614-83cf03de2906",
    "metadata": {},
    "outputs": [],
@@ -14,9 +39,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jcv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jcv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -28,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
